# bazel-compile-commands

./: MODULE.bazel  README.md
example/: BUILD.bazel  MODULE.bazel
