# As long as you have built the outputs of the library target first, you should
# be able to use compile commands with generated headers (or headers that are
# moved into generated folders).
cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = ["//library:math"],
)

alias(
    name = "compile_commands",
    actual = "@bazel_compile_commands//:generate_compile_commands",
)
